add Lina & JuanC

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                 <div class="col-sm-4">
                                     <div class="member">
                                         <p><img id='JuanD' class="img-responsive img-thumbnail img-circle" src="images/team3.jpg" alt="" ></p>
-                                        <h3>Juan Diego Cepeda Mosquera<small class="designation">Assitant Vice President
+                                        <h3>Juan Diego Cepeda Mosquera<small class="designation">Líder de desarrollo de productos
                                             <br>
                                             <ul>
                                                 <li>Velar por la máxima reutilización de artefactos de la línea</li>
@@ -315,21 +315,34 @@
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="member">
-                                        <p><img class="img-responsive img-thumbnail img-circle" src="images/team3.jpg" alt="" ></p>
-                                        <h3>David Robbins<small class="designation">Co-Founder</small></h3>
+                                        <p><img  id='Lina' class="img-responsive img-thumbnail img-circle" src="images/lina.jpg" alt="" ></p>
+                                        <h3>Lina María Ochoa Venegas<small class="designation">Lider de administración de la configuración
+                                            <br>
+                                            <ul>
+                                                <li>Garantizar el empleo de las herramientas de trabajo definidas por el equipo</li>
+                                                <li>Crear repositorios de código y documentos</li>
+                                                <li>Definir estándares de nombramiento</li>
+                                                <li>Administrar el control de cambios y el versionamiento de los artefactos desarrollados</li>
+                                            </ul>
+                                        </small></h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="member">
-                                        <p><img class="img-responsive img-thumbnail img-circle" src="images/team1.jpg" alt="" ></p>
-                                        <h3>Philip Mejia<small class="designation">Marketing Manager</small></h3>
+                                        <p><img id='JuanC' class="img-responsive img-thumbnail img-circle" src="images/juanC.jpg" alt="" ></p>
+                                        <h3>Philip Mejia<small class="designation">Líder de la Arquitectura
+                                            <br>
+                                            <ul>
+                                                <li>Liderar y guiar el grupo en la definición</li>
+                                                <li>Diseño, desarrollo de la arquitectura de la línea de producto.</li>
+                                                <li>Liderar la verificación y validación de los requerimientos de variabilidad de la línea contra la arquitectura.</li>
+                                                <li>Guiar y facilitar la construcción de las vistas estructurales de la arquitectura y su relación con el modelo de variabilidad.</li>
+                                            </ul>
+                                        </small></h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
-                                    <div class="member">
-                                        <p><img class="img-responsive img-thumbnail img-circle" src="images/team2.jpg" alt="" ></p>
-                                        <h3>Charles Erickson<small class="designation">Support Manager</small></h3>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
