Add contrast and variables

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#main-slider"><i class="icon-home"></i></a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#services">Servicios</a></li>
+                        <!--<li><a href="#portfolio">Portfolio</a></li>-->
                         <!--<li><a href="#pricing">Pricing</a></li>-->
-                        <li><a href="#about-us">About Us</a></li>
+                        <li><a href="#about-us">Sobre Nosotros</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -100,44 +100,65 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="center">
-                            <i class="icon-bicycle icon-md icon-color1"></i>
-                            <h4>Cicle development</h4>
-                            <p>Exiting cycle devevolment</p>
+                            <i class="icon-info-sign icon-md icon-color1"></i>
+                            <h4>Comunes</h4>
+                            <p>Información y planeación de rutas</p>
                         </div>
                     </div><!--/.col-md-4-->
                     <div class="col-md-4 col-sm-6">
                         <div class="center">
-                            <i class="icon-bicyclist_mountain icon-md icon-color2"></i>
-                            <h4>MOuntain development</h4>
-                            <p>DownHill!</p>
+                            <i class="icon-book icon-md icon-color2"></i>
+                            <h4>Comunes</h4>
+                            <p>Directorio de servicios</p>
                         </div>
                     </div><!--/.col-md-4-->
                     <div class="col-md-4 col-sm-6">
                         <div class="center">
-                            <i class="icon-no_bicycle icon-md icon-color3"></i>
-                            <h4>No bike allowed</h4>
-                            <p>Help users find parking places</p>
+                            <i class="icon-user icon-md icon-color3"></i>
+                            <h4>Variables</h4>
+                            <p>Perfil de usuario</p>
                         </div>
                     </div><!--/.col-md-4-->
                     <div class="col-md-4 col-sm-6">
                         <div class="center">
-                            <i class="icon-bicyclist icon-md icon-color4"></i>
-                            <h4>UserHelp development</h4>
-                            <p>Dedicated to help the user</p>
+                            <i class="icon-truck icon-md icon-color4"></i>
+                            <h4>Variables</h4>
+                            <p>Servicio de recogida</p>
                         </div>
                     </div><!--/.col-md-4-->
                     <div class="col-md-4 col-sm-6">
                         <div class="center">
-                            <i class="icon-ambulance icon-md icon-color5"></i>
-                            <h4>Ensurance</h4>
-                            <p>Helping users in accident case</p>
+                            <i class="icon-history icon-md icon-color5"></i>
+                            <h4>Variables</h4>
+                            <p>Historial de viajes</p>
                         </div>
                     </div><!--/.col-md-4-->
                     <div class="col-md-4 col-sm-6">
                         <div class="center">
-                            <i class="icon-police icon-md icon-color6"></i>
-                            <h4>Security</h4>
-                            <p>Secure the users from thieves</p>
+                            <i class="icon-letter icon-md icon-color6"></i>
+                            <h4>Variables</h4>
+                            <p>Mensajes entre ciclistas</p>
+                        </div>
+                    </div><!--/.col-md-4-->
+                    <div class="col-md-4 col-sm-6">
+                        <div class="center">
+                            <i class="icon-family-group icon-md icon-color7"></i>
+                            <h4>Variables</h4>
+                            <p>Planeación de desplazamientos grupales</p>
+                        </div>
+                    </div><!--/.col-md-4-->
+                    <div class="col-md-4 col-sm-6">
+                        <div class="center">
+                            <i class="icon-facebook icon-md icon-color8"></i>
+                            <h4>Variables</h4>
+                            <p>Integración con redes sociales</p>
+                        </div>
+                    </div><!--/.col-md-4-->
+                    <div class="col-md-4 col-sm-6">
+                        <div class="center">
+                            <!--<i class="icon-police icon-md icon-color6"></i>-->
+                            <!--<h4>Variables</h4>-->
+                            <!--<p>Secure the users from thieves</p>-->
                         </div>
                     </div><!--/.col-md-4-->
                 </div><!--/.row-->
@@ -286,7 +307,7 @@
                                 <div class="col-sm-4">
                                     <div class="member">
                                         <p><img id="Jaime" class="img-responsive img-thumbnail img-circle" src="images/Jaime.png" alt="" ></p>
-                                        <h3>Jaime Molina<small class="designation">Líder desarrollo de productor
+                                        <h3>Jaime Molina<small class="designation">Líder desarrollo de productos
                                             <br>
                                             <ul>
                                                 <li>Activos de la linea</li>
@@ -298,7 +319,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="member">
-                                        <p><img id='JuanD' class="img-responsive img-thumbnail img-circle" src="images/team3.jpg" alt="" ></p>
+                                        <p><img id='JuanD' class="img-responsive img-thumbnail img-circle" src="images/juanD.png" alt="" ></p>
                                         <h3>Juan Diego Cepeda Mosquera<small class="designation">Líder de desarrollo de productos
                                             <br>
                                             <ul>
@@ -330,7 +351,7 @@
                                 <div class="col-sm-4">
                                     <div class="member">
                                         <p><img id='JuanC' class="img-responsive img-thumbnail img-circle" src="images/juanC.jpg" alt="" ></p>
-                                        <h3>Philip Mejia<small class="designation">Líder de la Arquitectura
+                                        <h3>Juan Camilo Beltrán Botero<small class="designation">Líder de la Arquitectura
                                             <br>
                                             <ul>
                                                 <li>Liderar y guiar el grupo en la definición</li>
