--- a/index.html
+++ b/index.html
@@ -193,6 +193,17 @@
     </section><!--/#scrum-->
 
     <!--/#scrum-->
+    <section>
+        <div class="container">
+            <div class="box last">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img class='img-thumbnail' src="images/LeanCanvas.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="canvas">
         <div class="container">
             <div class="box">
